# claude-workshop-multipleissues

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/explore-issue/: SKILL.md
.claude/skills/fix-review/: SKILL.md
.claude/skills/implement-issue/: SKILL.md
app/: database.py  main.py  models.py
app/routers/: users.py
tests/: conftest.py  test_users.py
