[project]
name = "workshop-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.0",
]

[dependency-groups]
dev = [
    "httpx==0.27.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.23.8",
    "anyio==4.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
